display fix checkbox, and wrapping keyboard

--- a/index-stylesheet.css
+++ b/index-stylesheet.css
@@ -14,3 +14,7 @@ span {
 	padding: 0px;
 	margin: 0px;
 }
+
+label {
+	color: black;
+}
